# total-alternative

./: README.md  safe-alternative.cabal  stack.yaml
src/Data/Foldable/: Alternative.hs
src/Data/List/: Alternative.hs
