name:                safe-alternative
version:             0.1.0.0
synopsis:            Safe Alternative interface for unsafe
                     prelude functions
description:         Please see README.md
homepage:            http://github.com/guaraqe/safe-alternative#readme
license:             BSD3
license-file:        LICENSE
author:              guaraqe
maintainer:          guaraqe@openmailbox.org
copyright:           2016 guaraqe
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.List.Alternative
                     , Data.Foldable.Alternative
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/guaraqe/list-alternative
